--- a/css/admin.css
+++ b/css/admin.css
@@ -33,6 +33,10 @@ header h1 img {
     margin-right: 10px;
     vertical-align: middle; 
 }
+header h1 a{
+	text-decoration:none;
+	color:inherit;
+}
 
 /* NAVIGATION */
 nav {
