--- a/css/admin.css
+++ b/css/admin.css
@@ -54,6 +54,7 @@ nav a {
     padding: 8px 15px;
     border-radius: 4px;
     transition: background-color 0.3s ease;
+    text-transform:uppercase;
 }
 
 nav a:hover {
