--- a/css/admin.css
+++ b/css/admin.css
@@ -21,7 +21,9 @@ header {
     text-align: center;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
-
+p{
+	text-align:justify;
+}
 header h1 {
     margin: 0;
     font-size: 1.8rem;
