--- a/css/admin.css
+++ b/css/admin.css
@@ -84,6 +84,8 @@ article {
     margin-bottom: 20px;
     padding-bottom: 15px;
     border-bottom: 1px solid #ddd;
+        width: 70%;
+    margin: auto;
 }
 
 article h3 {
