--- a/css/admin.css
+++ b/css/admin.css
@@ -46,6 +46,12 @@ nav {
     padding: 10px;
     text-align: center;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
 }
 
 nav a {
@@ -207,5 +213,8 @@ html, body {
  text-align:center;
     font-size: 2rem;
 
+}
+nav a img{
+	width:28px;
 }
 
