--- a/css/admin.css
+++ b/css/admin.css
@@ -161,8 +161,10 @@ footer img {
    height:20px;
 }
 footer>img{
-width:100%;
+width:80%;
 height:auto;
+margin:auto;
+background:white;
 }
 
 /* Horizontal Rules */
